Criação da pagina e css

--- a/serviços.html
+++ b/serviços.html
@@ -1,11 +1,61 @@
-<!DOCTYPE html>
-<html lang="en">
+<!doctype html>
+<html lang="pt-BR">
 <head>
-    <meta charset="pt-br">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Serviços</title>
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width,initial-scale=1" />
+  <title>Astrynx — Serviços</title>
+  <link rel="stylesheet" href="css/style.css">
+
 </head>
 <body>
-    
+
+  <!-- HEADER -->
+  <header class="topo">
+    <div class="logo">
+      <a href="index.html"><img src="img/Logo astrynx.png" alt="Astrynx logo"></a>
+    </div>
+
+    <nav>
+      <a href="index.html">INÍCIO</a>
+      <a href="servicos.html" aria-current="page">SERVIÇOS</a>
+      <a href="#sobre">SOBRE</a>
+      <a href="#contato">CONTATOS</a>
+    </nav>
+  </header>
+
+  <!-- CONTEÚDO -->
+  <main class="wrap">
+    <section class="servicos-intro" aria-labelledby="servicos-title">
+      <h1 id="servicos-title">Serviços</h1>
+      <p>
+        Oferecemos serviços de desenvolvimento de software personalizados, focados em soluções que simplificam processos,
+        aumentam a eficiência e impulsionam resultados. Nossa expertise abrange desenvolvimento de sistemas, sites responsivos
+        e soluções em nuvem para empresas que buscam crescimento e segurança.
+      </p>
+    </section>
+
+    <section class="cards" aria-label="l</p>
+
+        <div class="service-cards>
+            <div class="card">
+                <i class="fas fa-desktop icon"></i>
+                <h2>Desenvolvimento de sistemas</h2>
+                <p>Construímos sistemas customizados que otimizam processos e melhoram a produtividade.</p>
+            </div>
+
+            <div class="card">
+                <i class="fas fa-mobile-alt icon"></i>
+                <h2>Site responsivo</h2>
+                <p>Criamos um site responsivo que ajusta automaticamente ao tamanho da tela do dispositivo em que está sendo visualizado</p>
+            </div>
+
+            <div class="card">
+                <i class="fas fa-cloud icon"></i>
+                <h2>Soluções em nuvem</h2>
+                <p>Implementamos soluções em nuvem que garantem flexibilidade e escalabilidade</p>
+            </div>
+        </div>
+    </section>
+
 </body>
 </html>
