Arrumando alguns erros e deixando mais bonito

--- a/index.html
+++ b/index.html
@@ -18,13 +18,12 @@
             <a href="#">SOBRE</a>
             <a href="#">SERVIÇOS</a>
             <a href="#">CONTATOS</a>
-            <span class="icon-search">🔍</span>
         </nav>
     </header>
 
     <section class="hero">
         <div class="texto">
-            <h1>Bem-vindo à Astrynx..</h1>
+            <h1>Bem-vindo à Astrynx</h1>
 
             <p class="subtitulo">
                 Somos especialistas no desenvolvimento de sistemas personalizados,
@@ -35,7 +34,7 @@
                 Nosso compromisso é entregar soluções eficientes, seguras e capazes de impulsionar a produtividade no seu dia a dia, sempre com suporte dedicado e resultados consistentes.
             </p>
 
-            <a href="#" class="botao">TESTAR AGORA !</a>
+            <a href="#" class="botao">SOBRE NÓS</a>
         </div>
 
         <div class="imagem">
