Adição de imagens e icones

--- a/serviços.html
+++ b/serviços.html
@@ -1,61 +1,60 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="pt-BR">
 <head>
-  <meta charset="utf-8" />
-  <meta name="viewport" content="width=device-width,initial-scale=1" />
-  <title>Astrynx — Serviços</title>
-  <link rel="stylesheet" href="css/style.css">
-
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>ASTRYNX - Serviços</title>
+    <link rel="icon" href="img/Logo astrynx.png" type="image/png">
+    <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
 
-  <!-- HEADER -->
-  <header class="topo">
-    <div class="logo">
-      <a href="index.html"><img src="img/Logo astrynx.png" alt="Astrynx logo"></a>
-    </div>
+    <header class="topo">
+        <div class="logo">
+            <img src="img/Logo astrynx.png" alt="Logo Astrynx">
+        </div>
 
-    <nav>
-      <a href="index.html">INÍCIO</a>
-      <a href="servicos.html" aria-current="page">SERVIÇOS</a>
-      <a href="#sobre">SOBRE</a>
-      <a href="#contato">CONTATOS</a>
-    </nav>
-  </header>
+        <nav class="menu">
+            <a href="#">INICIO</a>
+            <a href="#">SOBRE</a>
+            <a href="#">SERVIÇOS</a>
+            <a href="#">CONTATOS</a>
+        </nav>
+    </header>
 
-  <!-- CONTEÚDO -->
-  <main class="wrap">
-    <section class="servicos-intro" aria-labelledby="servicos-title">
-      <h1 id="servicos-title">Serviços</h1>
-      <p>
-        Oferecemos serviços de desenvolvimento de software personalizados, focados em soluções que simplificam processos,
-        aumentam a eficiência e impulsionam resultados. Nossa expertise abrange desenvolvimento de sistemas, sites responsivos
-        e soluções em nuvem para empresas que buscam crescimento e segurança.
-      </p>
-    </section>
+    <div class="wrap">
+        <section class="servicos-intro">
+            <h1>Serviços</h1>
+            <p>
+                Oferecemos serviços de desenvolvimento de software personalizados, focados em soluções que aumentam eficiência,
+                automatizam processos e impulsionam resultados para empresas de todos os portes.
+            </p>
+        </section>
 
-    <section class="cards" aria-label="l</p>
-
-        <div class="service-cards>
+        <section class="cards">
             <div class="card">
-                <i class="fas fa-desktop icon"></i>
-                <h2>Desenvolvimento de sistemas</h2>
+                <img class="icon" src="img/tela_comp-removebg-preview (1).png" alt="Desenvolvimento de sistemas">
+                <h3>Desenvolvimento de sistemas</h3>
                 <p>Construímos sistemas customizados que otimizam processos e melhoram a produtividade.</p>
             </div>
 
             <div class="card">
-                <i class="fas fa-mobile-alt icon"></i>
-                <h2>Site responsivo</h2>
-                <p>Criamos um site responsivo que ajusta automaticamente ao tamanho da tela do dispositivo em que está sendo visualizado</p>
+                <img class="icon" src="img/tela-removebg-preview.png" alt="Site responsivo">
+                <h3>Site responsivo</h3>
+                <p>Criamos sites responsivos que se adaptam a qualquer dispositivo com alta performance.</p>
             </div>
 
             <div class="card">
-                <i class="fas fa-cloud icon"></i>
-                <h2>Soluções em nuvem</h2>
-                <p>Implementamos soluções em nuvem que garantem flexibilidade e escalabilidade</p>
+                <img class="icon" src="img/nuvem-removebg-preview.png" alt="Soluções em nuvem">
+                <h3>Soluções em nuvem</h3>
+                <p>Implementamos soluções em nuvem que garantem segurança, flexibilidade e escalabilidade.</p>
             </div>
-        </div>
-    </section>
+        </section>
+    </div>
+
+    <footer>
+        &copy; 2025 Astrynx. Todos os direitos reservados.
+    </footer>
 
 </body>
 </html>
