Adição do botão saiba mais e organização do css

--- a/serviços.html
+++ b/serviços.html
@@ -50,6 +50,13 @@
                 <p>Implementamos soluções em nuvem que garantem segurança, flexibilidade e escalabilidade.</p>
             </div>
         </section>
+
+        <!-- BOTÕES ABAIXO DOS CARDS -->
+        <section class="buttons">
+            <a class="botao" href="ds.html">Saiba mais </a>
+            <a class="botao" href="rs.html">Saiba mais </a>
+            <a class="botao" href="so.html">Saiba mais </a>
+        </section>
     </div>
 
     <footer>
