--- a/contatos.html
+++ b/contatos.html
@@ -53,7 +53,11 @@
         <h3>Astrynx</h3>
         <a href="#">Sobre nós</a>
         <a href="#">Serviços</a>
-        <a href="#">Política de Privacidade</a>
+        <p>
+    <a href="politica.html" target="_blank" class="footer-link">
+        Política de Privacidade
+    
+</p>
         <a href="#">Termos de Uso</a>
     </div>
 
