fazendo um html  e um css para os novos botoes "saiba mais"

--- a/ds.html
+++ b/ds.html
@@ -5,6 +5,27 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Astrynx - Desenvolvimento de Sistemas</title>
     <link rel="icon" href="img/Logo astrynx.png" type="image/png">
+    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/ds.css">
+</head>
+<body>
+
+    <header class="topo">
+        <div class="logo">
+            <img src="img/Logo astrynx.png" alt="Logo Astrynx">
+        </div>
+
+        <nav class="menu">
+            <a href="index.html">INICIO</a>
+            <a href="#">SOBRE</a>
+            <a href="servicos.html">SERVIÇOS</a><!DOCTYPE html>
+<html lang="pt-BR">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Astrynx - Desenvolvimento de Sistemas</title>
+    <link rel="icon" href="img/Logo astrynx.png" type="image/png">
+    <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/ds.css">
 </head>
 <body>
@@ -18,6 +39,61 @@
             <a href="index.html">INICIO</a>
             <a href="#">SOBRE</a>
             <a href="servicos.html">SERVIÇOS</a>
+            <a href="#">CONTATOS</a>
+        </nav>
+    </header>
+
+    <div class="wrap">
+        <section class="conteudo">
+            <h1>Desenvolvimento de Sistemas</h1>
+
+            <img class="ilustracao" src="img/tela_comp-removebg-preview (1).png" alt="Desenvolvimento de sistemas">
+
+            <p>
+                Criamos sistemas personalizados sob demanda para empresas que desejam automatizar processos,
+                reduzir custos e aumentar a eficiência operacional através da tecnologia.
+            </p>
+
+            <p>
+                Cada projeto é desenvolvido com foco em segurança, performance e escalabilidade, garantindo
+                que sua empresa possa crescer sem limitações tecnológicas.
+            </p>
+
+            <h2>O que desenvolvemos:</h2>
+            <ul>
+                <li>Plataformas de gestão empresarial (ERP)</li>
+                <li>Sistemas financeiros e administrativos</li>
+                <li>Portais de atendimento e CRM</li>
+                <li>Integração com APIs, sistemas externos e bancos de dados</li>
+                <li>Aplicações web personalizadas com dashboards e relatórios inteligentes</li>
+            </ul>
+
+            <h2>Como funciona o processo de desenvolvimento:</h2>
+            <ol>
+                <li><strong>Diagnóstico:</strong> entendemos as necessidades e os objetivos da empresa.</li>
+                <li><strong>Planejamento:</strong> definimos arquitetura, módulos e funcionalidades.</li>
+                <li><strong>Desenvolvimento:</strong> codificação com tecnologias de alta performance.</li>
+                <li><strong>Testes:</strong> validação de segurança, performance e usabilidade.</li>
+                <li><strong>Entrega e Suporte:</strong> lançamento + suporte contínuo e atualizações.</li>
+            </ol>
+
+            <h2>Exemplo de projeto já realizado:</h2>
+            <div class="foto-projeto">
+                <img src="img/EXEMPLO-COLOCAR-AQUI.png" alt="Imagem do projeto realizado">
+                <p>📌 Você pode substituir a imagem acima pelo seu próprio print posteriormente — basta trocar a imagem na pasta <b>img</b> e manter o mesmo nome do arquivo.</p>
+            </div>
+
+            <a class="botao-voltar" href="servicos.html">⬅ Voltar aos serviços</a>
+        </section>
+    </div>
+
+    <footer>
+        &copy; 2025 Astrynx. Todos os direitos reservados.
+    </footer>
+
+</body>
+</html>
+
             <a href="#">CONTATOS</a>
         </nav>
     </header>
