adição da aba de saiba mais, de desenvolvimento

--- a/ds.html
+++ b/ds.html
@@ -5,131 +5,85 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Astrynx - Desenvolvimento de Sistemas</title>
     <link rel="icon" href="img/Logo astrynx.png" type="image/png">
-    <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/ds.css">
 </head>
 <body>
 
-    <header class="topo">
-        <div class="logo">
-            <img src="img/Logo astrynx.png" alt="Logo Astrynx">
-        </div>
+<header class="topo">
+    <div class="logo">
+        <img src="img/Logo astrynx.png" alt="Logo Astrynx">
+    </div>
 
-        <nav class="menu">
-            <a href="index.html">INICIO</a>
-            <a href="#">SOBRE</a>
-            <a href="servicos.html">SERVIÇOS</a><!DOCTYPE html>
-<html lang="pt-BR">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Astrynx - Desenvolvimento de Sistemas</title>
-    <link rel="icon" href="img/Logo astrynx.png" type="image/png">
-    <link rel="stylesheet" href="css/style.css">
-    <link rel="stylesheet" href="css/ds.css">
-</head>
-<body>
+    <nav class="menu">
+        <a href="index.html">INICIO</a>
+        <a href="#">SOBRE</a>
+        <a href="servicos.html">SERVIÇOS</a>
+        <a href="#">CONTATOS</a>
+    </nav>
+</header>
 
-    <header class="topo">
-        <div class="logo">
-            <img src="img/Logo astrynx.png" alt="Logo Astrynx">
-        </div>
+<div class="wrap">
+    <section class="conteudo">
+        <h1>Desenvolvimento de Sistemas</h1>
 
-        <nav class="menu">
-            <a href="index.html">INICIO</a>
-            <a href="#">SOBRE</a>
-            <a href="servicos.html">SERVIÇOS</a>
-            <a href="#">CONTATOS</a>
-        </nav>
-    </header>
+        <img class="ilustracao" src="img/tela_comp-removebg-preview (1).png" alt="Desenvolvimento de sistemas">
 
-    <div class="wrap">
-        <section class="conteudo">
-            <h1>Desenvolvimento de Sistemas</h1>
+        <p>
+            Criamos sistemas personalizados sob medida para empresas que desejam automatizar processos,
+            aumentar a eficiência operacional e elevar seus resultados.
+        </p>
 
-            <img class="ilustracao" src="img/tela_comp-removebg-preview (1).png" alt="Desenvolvimento de sistemas">
+        <p>
+            Nosso foco é desenvolver plataformas rápidas, seguras e escaláveis, garantindo que sua empresa
+            tenha ferramentas tecnológicas que realmente façam diferença no dia a dia.
+        </p>
 
-            <p>
-                Criamos sistemas personalizados sob demanda para empresas que desejam automatizar processos,
-                reduzir custos e aumentar a eficiência operacional através da tecnologia.
-            </p>
-
-            <p>
-                Cada projeto é desenvolvido com foco em segurança, performance e escalabilidade, garantindo
-                que sua empresa possa crescer sem limitações tecnológicas.
-            </p>
-
-            <h2>O que desenvolvemos:</h2>
-            <ul>
-                <li>Plataformas de gestão empresarial (ERP)</li>
-                <li>Sistemas financeiros e administrativos</li>
-                <li>Portais de atendimento e CRM</li>
-                <li>Integração com APIs, sistemas externos e bancos de dados</li>
-                <li>Aplicações web personalizadas com dashboards e relatórios inteligentes</li>
-            </ul>
-
-            <h2>Como funciona o processo de desenvolvimento:</h2>
-            <ol>
-                <li><strong>Diagnóstico:</strong> entendemos as necessidades e os objetivos da empresa.</li>
-                <li><strong>Planejamento:</strong> definimos arquitetura, módulos e funcionalidades.</li>
-                <li><strong>Desenvolvimento:</strong> codificação com tecnologias de alta performance.</li>
-                <li><strong>Testes:</strong> validação de segurança, performance e usabilidade.</li>
-                <li><strong>Entrega e Suporte:</strong> lançamento + suporte contínuo e atualizações.</li>
-            </ol>
-
-            <h2>Exemplo de projeto já realizado:</h2>
-            <div class="foto-projeto">
-                <img src="img/EXEMPLO-COLOCAR-AQUI.png" alt="Imagem do projeto realizado">
-                <p>📌 Você pode substituir a imagem acima pelo seu próprio print posteriormente — basta trocar a imagem na pasta <b>img</b> e manter o mesmo nome do arquivo.</p>
+        <!-- Layout diagonal em 3 colunas -->
+        <div class="diagonal-container">
+            <div class="diagonal-item">
+                <h2>Tecnologias e Ferramentas</h2>
+                <ul>
+                    <li>HTML, CSS e JavaScript moderno</li>
+                    <li>Frameworks: React, Angular ou Vue.js</li>
+                    <li>Backend: Node.js, Python (Django/Flask) ou Java</li>
+                    <li>Bancos de dados SQL e NoSQL</li>
+                    <li>Integração com APIs e serviços externos</li>
+                    <li>Controle de versão com Git e GitHub</li>
+                </ul>
             </div>
+            <div class="diagonal-item">
+                <h2>Funcionalidades e Módulos</h2>
+                <ul>
+                    <li>Painéis administrativos (Dashboards)</li>
+                    <li>Gestão de usuários e permissões</li>
+                    <li>Automatização de processos empresariais</li>
+                    <li>Relatórios gerenciais e estatísticos</li>
+                    <li>Sistema de notificações e alertas</li>
+                    <li>Integração com serviços em nuvem</li>
+                </ul>
+            </div>
+            <div class="diagonal-item">
+                <h2>Exemplos de Projetos</h2>
+                <ul>
+                    <li>Sistema de controle de estoque e vendas</li>
+                    <li>Plataforma de gerenciamento de tarefas internas</li>
+                    <li>Aplicação web para acompanhamento de desempenho</li>
+                </ul>
+            </div>
+        </div>
 
-            <a class="botao-voltar" href="servicos.html">⬅ Voltar aos serviços</a>
-        </section>
-    </div>
+     
 
-    <footer>
-        &copy; 2025 Astrynx. Todos os direitos reservados.
-    </footer>
+        <!-- Botão centralizado -->
+        <div class="botao-voltar-container">
+            <a href="servicos.html" class="btn-voltar">⬅ Voltar aos serviços</a>
+        </div>
+    </section>
+</div>
 
-</body>
-</html>
-
-            <a href="#">CONTATOS</a>
-        </nav>
-    </header>
-
-    <div class="wrap">
-        <section class="conteudo">
-            <h1>Desenvolvimento de Sistemas</h1>
-
-            <img class="ilustracao" src="img/tela_comp-removebg-preview (1).png" alt="Desenvolvimento de sistemas">
-
-            <p>
-                Criamos sistemas personalizados sob medida para empresas que desejam automatizar processos,
-                aumentar a eficiência operacional e elevar seus resultados. 
-            </p>
-
-            <p>
-                Nosso foco é desenvolver plataformas rápidas, seguras e escaláveis, garantindo que sua empresa
-                tenha ferramentas tecnológicas que realmente façam diferença no dia a dia.
-            </p>
-
-            <h2>O que oferecemos:</h2>
-            <ul>
-                <li>Desenvolvimento de sistemas web completos</li>
-                <li>Sistemas integrados com bancos de dados</li>
-                <li>Integrações com APIs e softwares externos</li>
-                <li>Painéis administrativos e dashboards profissionais</li>
-                <li>Aplicações personalizadas para empresas</li>
-            </ul>
-
-            <a class="botao-voltar" href="servicos.html">⬅ Voltar aos serviços</a>
-        </section>
-    </div>
-
-    <footer>
-        &copy; 2025 Astrynx. Todos os direitos reservados.
-    </footer>
+<footer>
+    &copy; 2025 Astrynx. Todos os direitos reservados.
+</footer>
 
 </body>
 </html>
