--- a/telinha.html
+++ b/telinha.html
@@ -1,1 +1,18 @@
-doc
+<!DOCTYPE html>
+<html lang="pt-br">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Astrynx - Bem-vindo</title>
+    <link rel="stylesheet" href="css/telinha.css">
+</head>
+<body>
+
+    <div class="container">
+    <a href="index.html">
+    <img src="img/LOGO-removebg.png" alt="Imagem Astrynx" class="imagem-centro">
+</a>
+    </div>
+
+</body>
+</html>
