--- a/contatos.html
+++ b/contatos.html
@@ -54,11 +54,14 @@
         <a href="#">Sobre nós</a>
         <a href="#">Serviços</a>
         <p>
-    <a href="politica.html" target="_blank" class="footer-link">
+    <a href="politica.html" target="_blank" href="css/politica.css">
         Política de Privacidade
     
 </p>
-        <a href="#">Termos de Uso</a>
+        <p>
+    <a href="termos.html" target="_blank" class="footer-link" href="css/termos.css"></a>
+       Termos de uso
+</p>
     </div>
 
     <div class="col">
