--- a/politica.html
+++ b/politica.html
@@ -1,125 +1,81 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
 <head>
-<meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Política de Privacidade | Astrynx</title>
-
-<style>
-    body {
-        margin: 0;
-        padding: 0;
-        font-family: Arial, sans-serif;
-        background: #0a0a0f;
-        color: #fff;
-        line-height: 1.7;
-    }
-
-    header {
-        width: 100%;
-        padding: 20px;
-        background: #0f0f17;
-        border-bottom: 2px solid #5b2cff;
-        display: flex;
-        align-items: center;
-        justify-content: space-between;
-    }
-
-    .logo img {
-        height: 50px;
-    }
-
-    .container {
-        max-width: 900px;
-        margin: 50px auto;
-        padding: 20px;
-        background: #12121a;
-        border-radius: 12px;
-        box-shadow: 0 0 20px rgba(91, 44, 255, 0.3);
-    }
-
-    h1, h2 {
-        color: #a580ff;
-    }
-
-    a {
-        color: #a580ff;
-        text-decoration: none;
-    }
-
-    footer {
-        margin-top: 50px;
-        padding: 20px;
-        text-align: center;
-        border-top: 1px solid #333;
-        background: #0f0f17;
-    }
-
-    .copy {
-        color: #777;
-        font-size: 14px;
-    }
-</style>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Política de Privacidade | Astrynx</title>
+    <link rel="stylesheet" href="style.css"> 
 </head>
 
 <body>
 
-<header>
-    <div class="logo">
-        <img src="img/Logo astrynx.png" alt="Astrynx Logo">
+    <header>
+        <div class="logo">
+            <img src="img/Logo astrynx.png" alt="Astrynx Logo">
+        </div>
+    </header>
+
+    <div class="container">
+
+        <h1>Política de Privacidade</h1>
+        <p>
+            Na <strong>Astrynx</strong>, valorizamos profundamente a privacidade dos nossos usuários.
+            Esta Política de Privacidade descreve como coletamos, utilizamos e protegemos as suas informações.
+        </p>
+
+        <h2>1. Informações Que Coletamos</h2>
+        <p>Coletamos apenas dados essenciais para garantir uma experiência segura e funcional:</p>
+        <ul>
+            <li>Nome e endereço de email</li>
+            <li>Telefone para contato</li>
+            <li>Informações enviadas através de formulários</li>
+            <li>Dados técnicos como cookies, IP e comportamento de navegação</li>
+        </ul>
+
+        <h2>2. Como Utilizamos Seus Dados</h2>
+        <p>Seus dados podem ser utilizados para:</p>
+        <ul>
+            <li>Responder solicitações e suporte</li>
+            <li>Melhorar o desempenho e experiência do site</li>
+            <li>Enviar atualizações e novidades (com consentimento)</li>
+            <li>Garantir segurança e prevenção contra fraudes</li>
+        </ul>
+
+        <h2>3. Compartilhamento</h2>
+        <p>
+            A <strong>Astrynx</strong> jamais vende ou compartilha seus dados com terceiros,
+            exceto quando obrigatório por lei ou para operações essenciais.
+        </p>
+
+        <h2>4. Segurança</h2>
+        <p>
+            Utilizamos sistemas modernos de proteção e auditoria. Embora nenhum sistema seja
+            totalmente invulnerável, buscamos constantemente reforçar nossas medidas de segurança.
+        </p>
+
+        <h2>5. Seus Direitos</h2>
+        <p>Você pode solicitar:</p>
+        <ul>
+            <li>Remoção ou correção dos seus dados</li>
+            <li>Informações sobre o uso dos seus dados</li>
+            <li>Cancelamento de comunicações</li>
+        </ul>
+
+        <h2>6. Atualizações</h2>
+        <p>A política poderá ser atualizada periodicamente. Alterações entrarão em vigor imediatamente após publicação.</p>
+
+        <h2>7. Contato</h2>
+        <p>
+            Em caso de dúvidas:
+            <br><strong>Email:</strong> astrynx@gmail.com.br
+            <br><strong>Telefone:</strong> (11) 96969-9696
+        </p>
+
     </div>
-</header>
 
-<div class="container">
-
-    <h1>Política de Privacidade</h1>
-    <p>Na <strong>Astrynx</strong>, valorizamos a sua privacidade e estamos comprometidos em proteger todas as informações fornecidas pelos nossos usuários. Esta Política de Privacidade explica como coletamos, utilizamos e protegemos os seus dados.</p>
-
-    <h2>1. Informações Que Coletamos</h2>
-    <p>Coletamos apenas informações necessárias para o funcionamento adequado dos nossos serviços, incluindo:</p>
-    <ul>
-        <li>Nome e endereço de email;</li>
-        <li>Telefone de contato;</li>
-        <li>Informações enviadas por formulários;</li>
-        <li>Dados de navegação, como cookies e endereço IP.</li>
-    </ul>
-
-    <h2>2. Como Utilizamos Suas Informações</h2>
-    <p>Os dados coletados podem ser utilizados para:</p>
-    <ul>
-        <li>Responder solicitações de contato e suporte;</li>
-        <li>Melhorar nossos serviços e desempenho do site;</li>
-        <li>Enviar informações, novidades ou ofertas (somente com seu consentimento);</li>
-       <li>Garantir a segurança e proteção dos usuários.</li>
-    </ul>
-
-    <h2>3. Compartilhamento de Informações</h2>
-    <p>A <strong>Astrynx</strong> não vende, aluga ou compartilha suas informações pessoais com terceiros, exceto quando exigido por lei ou para funcionamento essencial do serviço (como servidores e sistemas de segurança).</p>
-
-    <h2>4. Segurança dos Dados</h2>
-    <p>Utilizamos protocolos e medidas de segurança para proteger todas as informações armazenadas. Embora nenhum sistema seja 100% seguro, trabalhamos constantemente para minimizar riscos.</p>
-
-    <h2>5. Seus Direitos</h2>
-    <p>Você pode solicitar a qualquer momento:</p>
-    <ul>
-        <li>A correção ou remoção dos seus dados;</li>
-        <li>Informações sobre como seus dados estão sendo utilizados;</li>
-        <li>Cancelamento do recebimento de emails ou notificações.</li>
-    </ul>
-
-    <h2>6. Alterações Nesta Política</h2>
-    <p>A Astrynx poderá atualizar esta Política de Privacidade periodicamente. As alterações entrarão em vigor imediatamente após sua publicação nesta página.</p>
-
-    <h2>7. Contato</h2>
-    <p>Se tiver dúvidas sobre nossa Política de Privacidade, entre em contato:</p>
-    <p><strong>Email:</strong> astrynx@gmail.com.br<br>
-       <strong>Telefone:</strong> (11) 96969-9696</p>
-
-</div>
-
-<footer>
-    <p class="copy">© Astrynx 2024 – Todos os direitos reservados.</p>
-</footer>
+    <footer>
+        <p class="copy">© Astrynx 2024 – Todos os direitos reservados.</p>
+    </footer>
 
 </body>
 </html>
