atualizando algumas imagens e adicionado uma imagem de fundo na parte do index

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
         </div>
 
         <div class="imagem">
-            <img src="img/Captura_de_tela_2025-11-24_084322-removebg.png" alt="Cubo Luminoso">
+            <img src="img/IMAGEM FUTURISTA.png" alt="Cubo Luminoso">
         </div>
     </section>
 
