adicao da aba saiba mais, de responsividade e celular demonstrativo

--- a/ds.html
+++ b/ds.html
@@ -6,6 +6,7 @@
     <title>Astrynx - Desenvolvimento de Sistemas</title>
     <link rel="icon" href="img/Logo astrynx.png" type="image/png">
     <link rel="stylesheet" href="css/ds.css">
+    <link rel="stylesheet" href="servicos.html">
 </head>
 <body>
 
@@ -15,9 +16,10 @@
     </div>
 
     <nav class="menu">
-        <a href="index.html">INICIO</a>
+        <a href="so.html">INÍCIO</a>
         <a href="#">SOBRE</a>
         <a href="servicos.html">SERVIÇOS</a>
+
         <a href="#">CONTATOS</a>
     </nav>
 </header>
@@ -72,11 +74,9 @@
             </div>
         </div>
 
-     
-
         <!-- Botão centralizado -->
         <div class="botao-voltar-container">
-            <a href="serviços.html" class="bnt-voltar">⬅ Voltar aos serviços</a>
+            <a href="#servicos.html" class="btn-voltar">⬅ Voltar para Serviços</a>
         </div>
     </section>
 </div>
