--- a/ds.html
+++ b/ds.html
@@ -76,7 +76,7 @@
 
         <!-- Botão centralizado -->
         <div class="botao-voltar-container">
-            <a href="#servicos.html" class="btn-voltar">⬅ Voltar para Serviços</a>
+            <a href="servicos.html" class="btn-voltar">⬅ Voltar para Serviços</a>
         </div>
     </section>
 </div>
