--- a/rs.html
+++ b/rs.html
@@ -25,8 +25,10 @@
     <section class="conteudo">
         <h1>Responsividade</h1>
 
-        <img class="ilustracao" src="img/responsividade.png" alt="Responsividade em sistemas">
 
+        <div class="img-glow">
+            <img class="ilustracao" src="img/web-design-responsivo-1030x669-removebg-preview.png" alt="Responsividade em sistemas">
+        </div>
         <p>
             Desenvolvemos interfaces que se adaptam a qualquer dispositivo, garantindo a melhor experiência 
             do usuário em desktops, tablets e smartphones.
