alterando  temos de uso e politica na aba contatos

--- a/contatos.html
+++ b/contatos.html
@@ -47,21 +47,19 @@
 
 <p class="footer-info">
     
-</p>
 <footer>
     <div class="col">
         <h3>Astrynx</h3>
         <a href="#">Sobre nós</a>
         <a href="#">Serviços</a>
+
         <p>
-    <a href="politica.html" target="_blank" href="css/politica.css">
-        Política de Privacidade
-    
-</p>
+            <a href="politica.html" target="_blank">Política de Privacidade</a>
+        </p>
+
         <p>
-    <a href="termos.html" target="_blank" class="footer-link" href="css/termos.css"></a>
-       Termos de uso
-</p>
+            <a href="termos.html" target="_blank" class="footer-link">Termos de uso</a>
+        </p>
     </div>
 
     <div class="col">
@@ -73,8 +71,7 @@
 
     <div class="col">
         <h3>Seu email</h3>
-        <input type="email" placeholder="Digite seu e-mail" 
-        class="newsletter-input">
+        <input type="email" placeholder="Digite seu e-mail" class="newsletter-input">
     </div>
 
     <div class="col social">
@@ -86,6 +83,7 @@
 
     <p class="copy">© Astrynx 2024 - Todos os direitos reservados.</p>
 </footer>
+
 
 </body>
 </html>
