--- a/politica.html
+++ b/politica.html
@@ -1,21 +1,46 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
 <head>
+    <!-- CONFIGURAÇÕES BÁSICAS -->
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+    <!-- SEO -->
     <title>Política de Privacidade | Astrynx</title>
-    <link rel="stylesheet" href="style.css"> 
+    <meta name="description" content="Saiba como a Astrynx coleta, utiliza e protege seus dados conforme nossa Política de Privacidade.">
+
+    <!-- FAVICON -->
+    <link rel="icon" href="img/Logo astrynx.png" type="image/png">
+
+    <!-- CSS -->
+    <link rel="stylesheet" href="css/politica.css">
 </head>
 
 <body>
 
-    <header>
+    <!-- MENU SUPERIOR -->
+    <header class="topo">
         <div class="logo">
-            <img src="img/Logo astrynx.png" alt="Astrynx Logo">
+            <a href="index.html" aria-label="Página inicial">
+                <img src="img/Logo astrynx.png" alt="Logo Astrynx">
+            </a>
         </div>
+
+        <nav aria-label="Menu principal">
+            <ul class="menu-lista">
+                <li><a href="index.html">Início</a></li>
+                <li><a href="sobre.html">Sobre</a></li>
+                <li><a href="servicos.html">Serviços</a></li>
+                <li><a href="contato.html">Contatos</a></li>
+            </ul>
+        </nav>
     </header>
 
-    <div class="container">
+    <!-- BARRA ROXA -->
+    <div class="linha-brilho"></div>
+
+    <!-- CONTEÚDO PRINCIPAL -->
+    <main class="container">
 
         <h1>Política de Privacidade</h1>
         <p>
@@ -23,56 +48,73 @@
             Esta Política de Privacidade descreve como coletamos, utilizamos e protegemos as suas informações.
         </p>
 
-        <h2>1. Informações Que Coletamos</h2>
-        <p>Coletamos apenas dados essenciais para garantir uma experiência segura e funcional:</p>
-        <ul>
-            <li>Nome e endereço de email</li>
-            <li>Telefone para contato</li>
-            <li>Informações enviadas através de formulários</li>
-            <li>Dados técnicos como cookies, IP e comportamento de navegação</li>
-        </ul>
+        <section>
+            <h2>1. Informações Que Coletamos</h2>
+            <p>Coletamos apenas dados essenciais para garantir uma experiência segura e funcional:</p>
+            <ul>
+                <li>Nome e endereço de email</li>
+                <li>Telefone para contato</li>
+                <li>Informações enviadas através de formulários</li>
+                <li>Dados técnicos como cookies, IP e comportamento de navegação</li>
+            </ul>
+        </section>
 
-        <h2>2. Como Utilizamos Seus Dados</h2>
-        <p>Seus dados podem ser utilizados para:</p>
-        <ul>
-            <li>Responder solicitações e suporte</li>
-            <li>Melhorar o desempenho e experiência do site</li>
-            <li>Enviar atualizações e novidades (com consentimento)</li>
-            <li>Garantir segurança e prevenção contra fraudes</li>
-        </ul>
+        <section>
+            <h2>2. Como Utilizamos Seus Dados</h2>
+            <p>Seus dados podem ser utilizados para:</p>
+            <ul>
+                <li>Responder solicitações e suporte</li>
+                <li>Melhorar o desempenho e experiência do site</li>
+                <li>Enviar atualizações e novidades (com consentimento)</li>
+                <li>Garantir segurança e prevenção contra fraudes</li>
+            </ul>
+        </section>
 
-        <h2>3. Compartilhamento</h2>
-        <p>
-            A <strong>Astrynx</strong> jamais vende ou compartilha seus dados com terceiros,
-            exceto quando obrigatório por lei ou para operações essenciais.
-        </p>
+        <section>
+            <h2>3. Compartilhamento</h2>
+            <p>
+                A <strong>Astrynx</strong> jamais vende ou compartilha seus dados com terceiros,
+                exceto quando obrigatório por lei ou para operações essenciais.
+            </p>
+        </section>
 
-        <h2>4. Segurança</h2>
-        <p>
-            Utilizamos sistemas modernos de proteção e auditoria. Embora nenhum sistema seja
-            totalmente invulnerável, buscamos constantemente reforçar nossas medidas de segurança.
-        </p>
+        <section>
+            <h2>4. Segurança</h2>
+            <p>
+                Utilizamos sistemas modernos de proteção e auditoria. Embora nenhum sistema seja
+                totalmente invulnerável, buscamos constantemente reforçar nossas medidas de segurança.
+            </p>
+        </section>
 
-        <h2>5. Seus Direitos</h2>
-        <p>Você pode solicitar:</p>
-        <ul>
-            <li>Remoção ou correção dos seus dados</li>
-            <li>Informações sobre o uso dos seus dados</li>
-            <li>Cancelamento de comunicações</li>
-        </ul>
+        <section>
+            <h2>5. Seus Direitos</h2>
+            <p>Você pode solicitar:</p>
+            <ul>
+                <li>Remoção ou correção dos seus dados</li>
+                <li>Informações sobre o uso dos seus dados</li>
+                <li>Cancelamento de comunicações</li>
+            </ul>
+        </section>
 
-        <h2>6. Atualizações</h2>
-        <p>A política poderá ser atualizada periodicamente. Alterações entrarão em vigor imediatamente após publicação.</p>
+        <section>
+            <h2>6. Atualizações</h2>
+            <p>
+                A política poderá ser atualizada periodicamente. Alterações entrarão em vigor imediatamente após publicação.
+            </p>
+        </section>
 
-        <h2>7. Contato</h2>
-        <p>
-            Em caso de dúvidas:
-            <br><strong>Email:</strong> astrynx@gmail.com.br
-            <br><strong>Telefone:</strong> (11) 96969-9696
-        </p>
+        <section>
+            <h2>7. Contato</h2>
+            <p>
+                Em caso de dúvidas:
+                <br><strong>Email:</strong> astrynx@gmail.com.br
+                <br><strong>Telefone:</strong> (11) 96969-9696
+            </p>
+        </section>
 
-    </div>
+    </main>
 
+    <!-- RODAPÉ -->
     <footer>
         <p class="copy">© Astrynx 2024 – Todos os direitos reservados.</p>
     </footer>
