--- a/termos.html
+++ b/termos.html
@@ -1,86 +1,127 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
 <head>
-<meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Termos de Uso | Astrynx</title>
+    <!-- CONFIGURAÇÕES BÁSICAS -->
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-<link rel="stylesheet" href="css/termos.css">
+    <!-- SEO -->
+    <title>Termos de Uso | Astrynx</title>
+    <meta name="description" content="Leia os Termos de Uso da Astrynx e entenda suas responsabilidades ao utilizar nossos serviços.">
+
+    <!-- FAVICON -->
+    <link rel="icon" href="img/Logo astrynx.png" type="image/png">
+
+    <!-- CSS -->
+    <link rel="stylesheet" href="css/termos.css">
 </head>
 
 <body>
 
-<header>
-    <div class="logo">
-        <img src="img/Logo astrynx.png" alt="Astrynx Logo">
-    </div>
-</header>
+    <!-- MENU SUPERIOR -->
+    <header class="topo">
+        <div class="logo">
+            <a href="index.html" aria-label="Página inicial">
+                <img src="img/Logo astrynx.png" alt="Logo Astrynx">
+            </a>
+        </div>
 
-<div class="container">
+        <nav aria-label="Menu principal">
+            <ul class="menu-lista">
+                <li><a href="index.html">Início</a></li>
+                <li><a href="sobre.html">Sobre</a></li>
+                <li><a href="servicos.html">Serviços</a></li>
+                <li><a href="contato.html">Contatos</a></li>
+            </ul>
+        </nav>
+    </header>
 
-    <h1>Termos de Uso</h1>
-    <p>
-        Bem-vindo à <strong>Astrynx</strong>. Ao acessar nossos serviços, você concorda com estes 
-        Termos de Uso. Leia com atenção para compreender seus direitos e responsabilidades.
-    </p>
+    <!-- BARRA ROXA -->
+    <div class="linha-brilho"></div>
 
-    <h2>1. Aceitação dos Termos</h2>
-    <p>
-        Ao utilizar este site, você concorda automaticamente com os presentes Termos de Uso. Caso 
-        não concorde, recomendamos que suspenda o uso da plataforma.
-    </p>
+    <!-- CONTEÚDO PRINCIPAL -->
+    <main class="container">
+        <h1>Termos de Uso</h1>
 
-    <h2>2. Uso Permitido</h2>
-    <p>Ao acessar nossos serviços, você concorda em:</p>
-    <ul>
-        <li>Fornecer informações verdadeiras e atualizadas;</li>
-        <li>Não utilizar o site para atividades ilegais;</li>
-        <li>Não comprometer a segurança do sistema;</li>
-        <li>Não copiar ou explorar conteúdos da plataforma sem permissão.</li>
-    </ul>
+        <p>
+            Bem-vindo à <strong>Astrynx</strong>. Ao acessar nossos serviços, você concorda com estes
+            Termos de Uso. Leia com atenção para compreender seus direitos e responsabilidades.
+        </p>
 
-    <h2>3. Propriedade Intelectual</h2>
-    <p>
-        Todo conteúdo deste site, incluindo textos, imagens e design, pertence à Astrynx e é 
-        protegido por direitos autorais. Qualquer reprodução sem autorização é proibida.
-    </p>
+        <section>
+            <h2>1. Aceitação dos Termos</h2>
+            <p>
+                Ao utilizar este site, você concorda automaticamente com os presentes Termos de Uso.
+                Caso não concorde, recomendamos que suspenda o uso da plataforma.
+            </p>
+        </section>
 
-    <h2>4. Dados do Usuário</h2>
-    <p>
-        O usuário é responsável por fornecer informações verdadeiras e manter seus dados sempre 
-        atualizados ao utilizar nossos serviços.
-    </p>
+        <section>
+            <h2>2. Uso Permitido</h2>
+            <p>Ao acessar nossos serviços, você concorda em:</p>
+            <ul>
+                <li>Fornecer informações verdadeiras e atualizadas;</li>
+                <li>Não utilizar o site para atividades ilegais;</li>
+                <li>Não comprometer a segurança do sistema;</li>
+                <li>Não copiar ou explorar conteúdos da plataforma sem permissão.</li>
+            </ul>
+        </section>
 
-    <h2>5. Limitações de Responsabilidade</h2>
-    <p>
-        A Astrynx não garante que o site estará sempre disponível, livre de falhas ou interrupções. 
-        Porém, trabalhamos continuamente para oferecer a melhor experiência possível.
-    </p>
+        <section>
+            <h2>3. Propriedade Intelectual</h2>
+            <p>
+                Todo conteúdo deste site, incluindo textos, imagens e design, pertence à Astrynx e é
+                protegido por direitos autorais. Qualquer reprodução sem autorização é proibida.
+            </p>
+        </section>
 
-    <h2>6. Alterações nos Termos</h2>
-    <p>
-        A Astrynx pode alterar estes Termos de Uso a qualquer momento. Todas as alterações passam a 
-        valer imediatamente após serem publicadas nesta página.
-    </p>
+        <section>
+            <h2>4. Dados do Usuário</h2>
+            <p>
+                O usuário é responsável por fornecer informações verdadeiras e manter seus dados sempre
+                atualizados ao utilizar nossos serviços.
+            </p>
+        </section>
 
-    <h2>7. Suspensão de Acesso</h2>
-    <p>
-        Reservamo-nos o direito de suspender ou bloquear usuários que descumprirem estes termos, 
-        sem aviso prévio.
-    </p>
+        <section>
+            <h2>5. Limitações de Responsabilidade</h2>
+            <p>
+                A Astrynx não garante que o site estará sempre disponível, livre de falhas ou
+                interrupções. Porém, trabalhamos continuamente para oferecer a melhor experiência
+                possível.
+            </p>
+        </section>
 
-    <h2>8. Contato</h2>
-    <p>
-        Em caso de dúvidas sobre estes Termos:
-        <br><strong>Email:</strong> astrynx@gmail.com.br
-        <br><strong>Telefone:</strong> (11) 96969-9696
-    </p>
+        <section>
+            <h2>6. Alterações nos Termos</h2>
+            <p>
+                A Astrynx pode alterar estes Termos de Uso a qualquer momento. Todas as alterações
+                passam a valer imediatamente após serem publicadas nesta página.
+            </p>
+        </section>
 
-</div>
+        <section>
+            <h2>7. Suspensão de Acesso</h2>
+            <p>
+                Reservamo-nos o direito de suspender ou bloquear usuários que descumprirem estes
+                termos, sem aviso prévio.
+            </p>
+        </section>
 
-<footer>
-    <p class="copy">© Astrynx 2024 – Todos os direitos reservados.</p>
-</footer>
+        <section>
+            <h2>8. Contato</h2>
+            <p>
+                Em caso de dúvidas sobre estes Termos:
+                <br><strong>E-mail:</strong> astrynx@gmail.com
+                <br><strong>Telefone:</strong> (11) 96969-9696
+            </p>
+        </section>
+    </main>
+
+    <!-- RODAPÉ -->
+    <footer>
+        <p class="copy">© Astrynx 2024 – Todos os direitos reservados.</p>
+    </footer>
 
 </body>
 </html>
