fazendo a aba de armazenamento em nuvem

--- a/ds.html
+++ b/ds.html
@@ -28,7 +28,7 @@
     <section class="conteudo">
         <h1>Desenvolvimento de Sistemas</h1>
 
-        <img class="ilustracao" src="img/tela_comp-removebg-preview (1).png" alt="Desenvolvimento de sistemas">
+        <img class="ilustracao" src="img/img dev qualidade.png" alt="Desenvolvimento de sistemas">
 
         <p>
             Criamos sistemas personalizados sob medida para empresas que desejam automatizar processos,
