arrumando um erro de link do css e adicionando fotos nas paginas

--- a/rs.html
+++ b/rs.html
@@ -27,17 +27,9 @@
 
 
         <div class="img-glow">
-            <img class="ilustracao" src="img/web-design-responsivo-1030x669-removebg-preview.png" alt="Responsividade em sistemas">
+            <img class="ilustracao" src="img/responsivo sem fundo.png" alt="Responsividade em sistemas">
         </div>
-        <p>
-            Desenvolvemos interfaces que se adaptam a qualquer dispositivo, garantindo a melhor experiência 
-            do usuário em desktops, tablets e smartphones.
-        </p>
 
-        <p>
-            Nossos sistemas utilizam técnicas modernas de design responsivo, grids flexíveis, 
-            imagens otimizadas e testes em múltiplas resoluções.
-        </p>
 
         <!-- Layout diagonal em 3 colunas -->
         <div class="diagonal-container">
@@ -80,7 +72,7 @@
     
     <div class="dispositivo celular">
         <div class="tela">
-            <img src="img/print pro lohan.png" alt="Tela do site no celular">
+            <img src="img/Gemini_Generated_Image_wgms03wgms03wgms-removebg.png" alt="Tela do site no celular">
         </div>
     </div>
 </section>
