--- a/so.html
+++ b/so.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Astrynx - Soluções em Nuvem</title>
-    <link rel="stylesheet" href="css/rs.css">
+    <link rel="stylesheet" href="css/so.css">
 </head>
 <body>
 
@@ -29,18 +29,9 @@
 
         <!-- Imagem principal -->
         <div class="img-glow">
-            <img class="ilustracao" src="img/nuvem-removebg-preview.png" alt="Soluções em Nuvem">
+            <img class="ilustracao" src="img/nuvem so.png" alt="Soluções em Nuvem">
         </div>
 
-        <p>
-            Permitimos que sua empresa opere com desempenho máximo através de tecnologias de nuvem de última geração,
-            garantindo conectividade, segurança e disponibilidade contínua.
-        </p>
-
-        <p>
-            A nuvem oferece maior velocidade, escalabilidade sob demanda e acesso global,
-            ajudando sua empresa a reduzir custos e aumentar a produtividade.
-        </p>
 
         <!-- 3 CARDS (SEM IMAGEM INTERNA) -->
         <div class="diagonal-container">
